# matrix

./: CMakeLists.txt
cmake/: MatrixConfig.cmake.in
include/matrix/: matrix.h  matrix.hpp  matrix_base.h  matrix_file.h  matrix_math.h  matrix_output.hpp
src/: matrix.c  matrix.cpp  matrix_base.c  matrix_file.c  matrix_math.c  matrix_output.cpp
